test/spec_vectors/load64/fail/module_18.wat
(module (memory i64 1) (func $load16_u_i32 (i32.load16_u (i64.const 0))))